# airflow-docker-compose

./: Makefile  README.md  pyproject.toml
.circleci/: config.yml
.github/workflows/: test.yml
src/airflow_docker_compose/: __main__.py  airflow.cfg  cli.py  compose.py  docker-compose-template.yml  test.py  utils.py
tests/: test_import.py
